added main section start here

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                 <h1 class="text-4xl font-bold leading-10">Freshness <span class="text-[#179800]">You Can</span> <br>
                     <span class="text-[#179800]">Count</span> On, Prices You’ll Love!
                 </h1>
-                <p class="max-w-[799px] text-[#111111] text-center ">Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got you covered every day!</p>
+                <p class="max-w-[799px] text-[#111111] text-center ">Shop your daily essentials at unbeatable prices.
+                    From fresh produce to pantry staples, we’ve got you covered every day!</p>
             </div>
             <div>
                 <img src="./assets/hero-vegetables.png" class="mx-auto" alt="">
@@ -71,6 +72,13 @@
         </section>
 
     </header>
+    <!-- header section ends here  -->
+
+    <!-- main section start here  -->
+    <main class="w-full my-14">
+        
+    </main>
+    <!-- main section ends here  -->
 
 
 </body>
