added service section done

--- a/index.html
+++ b/index.html
@@ -75,8 +75,51 @@
     <!-- header section ends here  -->
 
     <!-- main section start here  -->
-    <main class="w-full my-14">
-        
+    <main class="w-full my-[140px]">
+        <!-- service  -->
+        <div class="max-w-[1152px] mx-auto">
+            <!-- service-text-content  -->
+            <div class="mx-14 lg:mx-0">
+                <h1 class="text-3xl text-[#179800] font-semibold mb-9">Service</h1>
+            </div>
+            <!-- service card  -->
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-5 place-items-center">
+                <!-- card-1  -->
+                <div
+                    class="flex flex-col items-center justify-center bg-[#EFEBE3] max-w-[424px] h-[367px] text-center space-y-5 rounded-xl p-8">
+                    <div class="flex items-center justify-center w-[150px] h-[150px] bg-white rounded-full ">
+                        <img src="./assets/service.png" alt="">
+                    </div>
+                    <h1 class="text-2xl text-black font-semibold">24/7 Services </h1>
+                    <p class="max-w-[360px] text-[#111111]">Always fresh vegetables at your door! 24 hours delivery
+                        Direct from the farm
+                        100% Fresh and Organic</p>
+                </div>
+                <!-- card-2 -->
+                <div
+                    class="flex flex-col items-center justify-center bg-[#EFEBE3] max-w-[424px] h-[367px] text-center space-y-5 rounded-xl p-8">
+                    <div class="flex items-center justify-center w-[150px] h-[150px] bg-white rounded-full ">
+                        <img src="./assets/delivery.png" alt="">
+                    </div>
+                    <h1 class="text-2xl text-black font-semibold">Fast Delivery </h1>
+                    <p class="max-w-[360px] text-[#111111]">Fresh vegetables, delicious food fast to your door!”
+                        Healthy food, super fast delivery!
+                    </p>
+                </div>
+                <!-- card-3  -->
+                <div
+                    class="flex flex-col items-center justify-center bg-[#EFEBE3] max-w-[424px] h-[367px] text-center space-y-5 rounded-xl p-8">
+                    <div class="flex items-center justify-center w-[150px] h-[150px] bg-white rounded-full ">
+                        <img src="./assets/healthy.png" alt="">
+                    </div>
+                    <h1 class="text-2xl text-black font-semibold">Healthy Products</h1>
+                    <p class="max-w-[360px] text-[#111111]">Stay healthy, choose natural and healthy products!"
+                        Not delicious, health is the priority now!
+                    </p>
+                </div>
+            </div>
+        </div>
+
     </main>
     <!-- main section ends here  -->
 
