--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                 <h1 class="text-4xl font-bold leading-10">Freshness <span class="text-[#179800]">You Can</span> <br>
                     <span class="text-[#179800]">Count</span> On, Prices You’ll Love!
                 </h1>
-                <p class="max-w-[799px] text-[#111111] text-center ">Shop your daily essentials at unbeatable prices.
+                <p class="max-w-[799px] text-[#111111] text-center mx-auto">Shop your daily essentials at unbeatable prices.
                     From fresh produce to pantry staples, we’ve got you covered every day!</p>
             </div>
-            <div>
-                <img src="./assets/hero-vegetables.png" class="mx-auto" alt="">
+            <div class="mx-auto">
+                <img class="mx-auto" src="./assets/hero-vegetables.png" class="mx-auto" alt="">
             </div>
         </section>
 
@@ -75,18 +75,18 @@
     <!-- header section ends here  -->
 
     <!-- main section start here  -->
-    <main class="w-full my-[140px]">
+    <main class="w-full my-[140px] ">
         <!-- service  -->
         <div class="max-w-[1152px] mx-auto">
             <!-- service-text-content  -->
-            <div class="mx-14 lg:mx-0">
+            <div class="mx-7 lg:mx-0">
                 <h1 class="text-3xl text-[#179800] font-semibold mb-9">Service</h1>
             </div>
             <!-- service card  -->
-            <div class="grid grid-cols-1 lg:grid-cols-3 gap-5 place-items-center">
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-5 place-items-center p-8">
                 <!-- card-1  -->
                 <div
-                    class="flex flex-col items-center justify-center bg-[#EFEBE3] max-w-[424px] h-[367px] text-center space-y-5 rounded-xl p-8">
+                    class="flex flex-col items-center justify-center bg-[#EFEBE3] max-w-[424px] text-center space-y-5 rounded-xl p-8">
                     <div class="flex items-center justify-center w-[150px] h-[150px] bg-white rounded-full ">
                         <img src="./assets/service.png" alt="">
                     </div>
@@ -97,7 +97,7 @@
                 </div>
                 <!-- card-2 -->
                 <div
-                    class="flex flex-col items-center justify-center bg-[#EFEBE3] max-w-[424px] h-[367px] text-center space-y-5 rounded-xl p-8">
+                    class="flex flex-col items-center justify-center bg-[#EFEBE3] max-w-[424px] text-center space-y-5 rounded-xl p-8">
                     <div class="flex items-center justify-center w-[150px] h-[150px] bg-white rounded-full ">
                         <img src="./assets/delivery.png" alt="">
                     </div>
@@ -108,7 +108,7 @@
                 </div>
                 <!-- card-3  -->
                 <div
-                    class="flex flex-col items-center justify-center bg-[#EFEBE3] max-w-[424px] h-[367px] text-center space-y-5 rounded-xl p-8">
+                    class="flex flex-col items-center justify-center bg-[#EFEBE3] max-w-[424px] text-center space-y-5 rounded-xl p-8">
                     <div class="flex items-center justify-center w-[150px] h-[150px] bg-white rounded-full ">
                         <img src="./assets/healthy.png" alt="">
                     </div>
@@ -119,7 +119,139 @@
                 </div>
             </div>
         </div>
-
+        <!-- popular product  -->
+        <section class="my-[140px] bg-[#EFEBE3] flex justify-center items-center py-[140px]">
+            <div class="max-w-[1152px] mx-auto">
+                <div class="ml-5">
+                <h1 class="text-3xl font-semibold text-[#179800]">Popular Products</h1>
+                </div>
+                <div class="grid lg:grid-cols-4 lg:grid-rows-1 grid-cols-1 mt-10 gap-4 p-5">
+                    <!-- sidebar -->
+                    <div
+                        class="col-span-2 lg:col-span-1 flex items-center bg-gradient-to-tr from-green-600 to-green-300  relative rounded-xl h-[402px] p-10">
+                        <div class="absolute z-10 space-y-5">
+                            <h1 class="text-2xl text-white font-bold">30% off</h1>
+                            <p class="text-black">Discover a world of treats, toys and essentials handpicked for</p>
+                            <button class="btn">Buy Now</button>
+                        </div>
+                        <div class="absolute left-[135px] bottom-0 ">
+                            <img class="z-0" src="./assets/vegetable-offer.png" alt="">
+                        </div>
+                    </div>
+                    <!-- product card  -->
+                    <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 col-span-3">
+                        <!-- card-1  -->
+                        <div class="flex items-center bg-[#FFFFFF] p-4 gap-4 rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                                <img src="./assets/image 43.png" alt="">
+                            </div>
+                            <div>
+                                <i class="fa-solid fa-star text-[#FFC107]"></i>
+                                <span> 4.5</span>
+                                <h1 class="text-xl font-medium">Onion 1kg</h1>
+                                <h3 class="font-medium">$39.99</h3>
+                            </div>
+                        </div>
+                        <!-- card-2  -->
+                        <div class="flex items-center bg-[#FFFFFF] p-4 gap-4 rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                                <img src="./assets/image 41.png" alt="">
+                            </div>
+                            <div>
+                                <i class="fa-solid fa-star text-[#FFC107]"></i>
+                                <span> 4.5</span>
+                                <h1 class="text-xl font-medium">Tomato 500 g </h1>
+                                <h3 class="font-medium">$39.99</h3>
+                            </div>
+                        </div>
+                        <!-- card-3  -->
+                        <div class="flex items-center bg-[#FFFFFF] p-4 gap-4 rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                                <img src="./assets/image 44.png" alt="">
+                            </div>
+                            <div>
+                                <i class="fa-solid fa-star text-[#FFC107]"></i>
+                                <span> 4.5</span>
+                                <h1 class="text-xl font-medium">Potato 1 KG</h1>
+                                <h3 class="font-medium">$39.99</h3>
+                            </div>
+                        </div>
+                        <!-- card-4  -->
+                        <div class="flex items-center bg-[#FFFFFF] p-4 gap-4 rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                                <img src="./assets/image 41.png" alt="">
+                            </div>
+                            <div>
+                                <i class="fa-solid fa-star text-[#FFC107]"></i>
+                                <span> 4.5</span>
+                                <h1 class="text-xl font-medium">Tomato 500 g </h1>
+                                <h3 class="font-medium">$39.99</h3>
+                            </div>
+                        </div>
+                        <!-- card-5 -->
+                        <div class="flex items-center bg-[#FFFFFF] p-4 gap-5 rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                                <img src="./assets/image 43.png" alt="">
+                            </div>
+                            <div>
+                                <i class="fa-solid fa-star text-[#FFC107]"></i>
+                                <span> 4.5</span>
+                                <h1 class="text-xl font-medium">Onion 1kg</h1>
+                                <h3 class="font-medium">$39.99</h3>
+                            </div>
+                        </div>
+                        <!-- card-6  -->
+                        <div class="flex items-center bg-[#FFFFFF] p-4 gap-5 rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                                <img src="./assets/image 41.png" alt="">
+                            </div>
+                            <div>
+                                <i class="fa-solid fa-star text-[#FFC107]"></i>
+                                <span> 4.5</span>
+                                <h1 class="text-xl font-medium">Tomato 500 g </h1>
+                                <h3 class="font-medium">$39.99</h3>
+                            </div>
+                        </div>
+                        <!-- card-7  -->
+                        <div class="flex items-center bg-[#FFFFFF] p-4 gap-5 rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                                <img src="./assets/image 43.png" alt="">
+                            </div>
+                            <div>
+                                <i class="fa-solid fa-star text-[#FFC107]"></i>
+                                <span> 4.5</span>
+                                <h1 class="text-xl font-medium">Onion 1kg</h1>
+                                <h3 class="font-medium">$39.99</h3>
+                            </div>
+                        </div>
+                        <!-- card-8  -->
+                        <div class="flex items-center bg-[#FFFFFF] p-4 gap-5 rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                                <img src="./assets/image 44.png" alt="">
+                            </div>
+                            <div>
+                                <i class="fa-solid fa-star text-[#FFC107]"></i>
+                                <span> 4.5</span>
+                                <h1 class="text-xl font-medium">Potato 1 KG</h1>
+                                <h3 class="font-medium">$39.99</h3>
+                            </div>
+                        </div>
+                        <!-- card-9  -->
+                        <div class="flex items-center bg-[#FFFFFF] p-4 gap-5 rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                                <img src="./assets/image 44.png" alt="">
+                            </div>
+                            <div>
+                                <i class="fa-solid fa-star text-[#FFC107]"></i>
+                                <span> 4.5</span>
+                                <h1 class="text-xl font-medium">Potato 1 KG</h1>
+                                <h3 class="font-medium">$39.99</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- main section ends here  -->
 
