added arrival section done

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                 <h1 class="text-4xl font-bold leading-10">Freshness <span class="text-[#179800]">You Can</span> <br>
                     <span class="text-[#179800]">Count</span> On, Prices You’ll Love!
                 </h1>
-                <p class="max-w-[799px] text-[#111111] text-center mx-auto">Shop your daily essentials at unbeatable prices.
+                <p class="max-w-[799px] text-[#111111] text-center mx-auto">Shop your daily essentials at unbeatable
+                    prices.
                     From fresh produce to pantry staples, we’ve got you covered every day!</p>
             </div>
             <div class="mx-auto">
@@ -79,7 +80,7 @@
         <!-- service  -->
         <div class="max-w-[1152px] mx-auto">
             <!-- service-text-content  -->
-            <div class="mx-7 lg:mx-0">
+            <div class="mx-7">
                 <h1 class="text-3xl text-[#179800] font-semibold mb-9">Service</h1>
             </div>
             <!-- service card  -->
@@ -123,7 +124,7 @@
         <section class="my-[140px] bg-[#EFEBE3] flex justify-center items-center py-[140px]">
             <div class="max-w-[1152px] mx-auto">
                 <div class="ml-5">
-                <h1 class="text-3xl font-semibold text-[#179800]">Popular Products</h1>
+                    <h1 class="text-3xl font-semibold text-[#179800]">Popular Products</h1>
                 </div>
                 <div class="grid lg:grid-cols-4 lg:grid-rows-1 grid-cols-1 mt-10 gap-4 p-5">
                     <!-- sidebar -->
@@ -142,7 +143,7 @@
                     <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 col-span-3">
                         <!-- card-1  -->
                         <div class="flex items-center bg-[#FFFFFF] p-4 gap-4 rounded-xl">
-                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3]  w-[70px] h-[70px]  rounded-xl">
                                 <img src="./assets/image 43.png" alt="">
                             </div>
                             <div>
@@ -154,7 +155,7 @@
                         </div>
                         <!-- card-2  -->
                         <div class="flex items-center bg-[#FFFFFF] p-4 gap-4 rounded-xl">
-                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3]  w-[70px] h-[70px] rounded-xl">
                                 <img src="./assets/image 41.png" alt="">
                             </div>
                             <div>
@@ -166,7 +167,7 @@
                         </div>
                         <!-- card-3  -->
                         <div class="flex items-center bg-[#FFFFFF] p-4 gap-4 rounded-xl">
-                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3]  w-[70px] h-[70px]  rounded-xl">
                                 <img src="./assets/image 44.png" alt="">
                             </div>
                             <div>
@@ -178,7 +179,7 @@
                         </div>
                         <!-- card-4  -->
                         <div class="flex items-center bg-[#FFFFFF] p-4 gap-4 rounded-xl">
-                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3]  w-[70px] h-[70px] rounded-xl">
                                 <img src="./assets/image 41.png" alt="">
                             </div>
                             <div>
@@ -190,7 +191,7 @@
                         </div>
                         <!-- card-5 -->
                         <div class="flex items-center bg-[#FFFFFF] p-4 gap-5 rounded-xl">
-                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3]  w-[70px] h-[70px] rounded-xl">
                                 <img src="./assets/image 43.png" alt="">
                             </div>
                             <div>
@@ -202,7 +203,7 @@
                         </div>
                         <!-- card-6  -->
                         <div class="flex items-center bg-[#FFFFFF] p-4 gap-5 rounded-xl">
-                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3]  w-[70px] h-[70px] rounded-xl">
                                 <img src="./assets/image 41.png" alt="">
                             </div>
                             <div>
@@ -238,7 +239,7 @@
                         </div>
                         <!-- card-9  -->
                         <div class="flex items-center bg-[#FFFFFF] p-4 gap-5 rounded-xl">
-                            <div class="flex items-center justify-center bg-[#EFEBE3] w-[70px] h-[70px] rounded-xl">
+                            <div class="flex items-center justify-center bg-[#EFEBE3]  w-[70px] h-[70px] rounded-xl">
                                 <img src="./assets/image 44.png" alt="">
                             </div>
                             <div>
@@ -252,6 +253,41 @@
                 </div>
             </div>
         </section>
+
+        <!-- Arrival & offer section  -->
+        <section class="max-w-[1152px] mx-auto my-[140px]">
+            <div class="mx-4">
+                <h1 class="text-3xl font-semibold text-[#179800]">Arrival & Offers</h1>
+            </div>
+            <div class="grid gird-cols-1 lg:grid-cols-3 mt-10 gap-5  m-4 ">
+                <!-- card-1  -->
+                <div
+                    class="bg-[#115414] flex items-center justify-between p-4 col-span-1 lg:col-span-2  rounded-xl">
+                    <div class="space-y-4">
+                        <img src="./assets/dawat-logo.png" alt="">
+                        <button class="btn border-none text-white bg-[#63B76D] hover:bg-green-400 px-10 ">Cook Exotic
+                            Dishes</button>
+                        <h1 class="text-xl text-white ">UP to <span class="font-bold">20% OFF</span></h1>
+                    </div>
+                    <div>
+                        <img src="./assets/dawat-mock-up.png" alt="">
+                    </div>
+                </div>
+                <!-- card-2  -->
+                <div class="col-span-1 flex items-center justify-between rounded-xl bg-[#102861] p-4 gap-2">
+                    <div class="space-y-4">
+                        <img src="./assets/india-gate-logo.png" alt="">
+                        <button class="btn bg-[#2A4D97] text-white px-9 border-none hover:bg-blue-600 ">World’s No.1 Rice</button>
+                        <h1 class="text-xl text-white ">UP to <span class="font-bold">20% OFF</span></h1>
+                    </div>
+                    <div>
+                        <img src="./assets/india-gate-mock-up.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
     </main>
     <!-- main section ends here  -->
 
