--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
                 <div class="ml-5">
                     <h1 class="text-3xl font-semibold text-[#179800]">Popular Products</h1>
                 </div>
-                <div class="grid lg:grid-cols-4 lg:grid-rows-1 grid-cols-1 mt-10 gap-4 p-5">
+                <div class="grid lg:grid-cols-4 lg:grid-rows-1 grid-cols-1 mt-10 gap-4 m-5">
                     <!-- sidebar -->
                     <div
-                        class="col-span-2 lg:col-span-1 flex items-center bg-gradient-to-tr from-green-600 to-green-300  relative rounded-xl h-[402px] p-10">
+                        class="col-span-2 lg:col-span-1 flex items-center bg-gradient-to-tr from-green-600 to-green-300  relative rounded-xl h-[402px] w-full p-4">
                         <div class="absolute z-10 space-y-5">
                             <h1 class="text-2xl text-white font-bold">30% off</h1>
                             <p class="text-black">Discover a world of treats, toys and essentials handpicked for</p>
-                            <button class="btn">Buy Now</button>
+                            <button class="btn px-8">Buy Now</button>
                         </div>
                         <div class="absolute left-[135px] bottom-0 ">
                             <img class="z-0" src="./assets/vegetable-offer.png" alt="">
@@ -149,7 +149,7 @@
                             <div>
                                 <i class="fa-solid fa-star text-[#FFC107]"></i>
                                 <span> 4.5</span>
-                                <h1 class="text-xl font-medium">Onion 1kg</h1>
+                                <h1 class="font-medium">Onion 1kg</h1>
                                 <h3 class="font-medium">$39.99</h3>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                             <div>
                                 <i class="fa-solid fa-star text-[#FFC107]"></i>
                                 <span> 4.5</span>
-                                <h1 class="text-xl font-medium">Tomato 500 g </h1>
+                                <h1 class="font-medium">Tomato 500 g </h1>
                                 <h3 class="font-medium">$39.99</h3>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
                             <div>
                                 <i class="fa-solid fa-star text-[#FFC107]"></i>
                                 <span> 4.5</span>
-                                <h1 class="text-xl font-medium">Potato 1 KG</h1>
+                                <h1 class="font-medium">Potato 1 KG</h1>
                                 <h3 class="font-medium">$39.99</h3>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                             <div>
                                 <i class="fa-solid fa-star text-[#FFC107]"></i>
                                 <span> 4.5</span>
-                                <h1 class="text-xl font-medium">Tomato 500 g </h1>
+                                <h1 class="font-medium">Tomato 500 g </h1>
                                 <h3 class="font-medium">$39.99</h3>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                             <div>
                                 <i class="fa-solid fa-star text-[#FFC107]"></i>
                                 <span> 4.5</span>
-                                <h1 class="text-xl font-medium">Onion 1kg</h1>
+                                <h1 class="font-medium">Onion 1kg</h1>
                                 <h3 class="font-medium">$39.99</h3>
                             </div>
                         </div>
@@ -209,7 +209,7 @@
                             <div>
                                 <i class="fa-solid fa-star text-[#FFC107]"></i>
                                 <span> 4.5</span>
-                                <h1 class="text-xl font-medium">Tomato 500 g </h1>
+                                <h1 class="font-medium">Tomato 500 g </h1>
                                 <h3 class="font-medium">$39.99</h3>
                             </div>
                         </div>
@@ -221,7 +221,7 @@
                             <div>
                                 <i class="fa-solid fa-star text-[#FFC107]"></i>
                                 <span> 4.5</span>
-                                <h1 class="text-xl font-medium">Onion 1kg</h1>
+                                <h1 class="font-medium">Onion 1kg</h1>
                                 <h3 class="font-medium">$39.99</h3>
                             </div>
                         </div>
@@ -233,7 +233,7 @@
                             <div>
                                 <i class="fa-solid fa-star text-[#FFC107]"></i>
                                 <span> 4.5</span>
-                                <h1 class="text-xl font-medium">Potato 1 KG</h1>
+                                <h1 class="font-medium">Potato 1 KG</h1>
                                 <h3 class="font-medium">$39.99</h3>
                             </div>
                         </div>
@@ -245,7 +245,7 @@
                             <div>
                                 <i class="fa-solid fa-star text-[#FFC107]"></i>
                                 <span> 4.5</span>
-                                <h1 class="text-xl font-medium">Potato 1 KG</h1>
+                                <h1 class="font-medium">Potato 1 KG</h1>
                                 <h3 class="font-medium">$39.99</h3>
                             </div>
                         </div>
@@ -291,6 +291,13 @@
     </main>
     <!-- main section ends here  -->
 
+    <!-- footer section start here  -->
+    <footer class="w-full bg-[#179800] h-[658px] mt-[389px]">
+        <div>
+
+        </div>
+    </footer>
+    <!-- footer section ends here  -->
 
 </body>
 
