added footer section

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
         <!-- banner related style here  -->
         <section class="mx-auto space-y-10 ">
             <!-- text content  -->
-            <div class="mx-auto text-center space-y-4 max-w-[827px] mt-8">
-                <h1 class="text-4xl font-bold leading-10">Freshness <span class="text-[#179800]">You Can</span> <br>
+            <div class="mx-auto text-center space-y-4 mt-8 max-w-[827px] h-[224px]">
+                <h1 class="text-4xl font-bold leading-10 animate-pulse">Freshness <span class="text-[#179800]">You
+                        Can</span> <br>
                     <span class="text-[#179800]">Count</span> On, Prices You’ll Love!
                 </h1>
                 <p class="max-w-[799px] text-[#111111] text-center mx-auto">Shop your daily essentials at unbeatable
@@ -261,8 +262,7 @@
             </div>
             <div class="grid gird-cols-1 lg:grid-cols-3 mt-10 gap-5  m-4 ">
                 <!-- card-1  -->
-                <div
-                    class="bg-[#115414] flex items-center justify-between p-4 col-span-1 lg:col-span-2  rounded-xl">
+                <div class="bg-[#115414] flex items-center justify-between p-4 col-span-1 lg:col-span-2  rounded-xl">
                     <div class="space-y-4">
                         <img src="./assets/dawat-logo.png" alt="">
                         <button class="btn border-none text-white bg-[#63B76D] hover:bg-green-400 px-10 ">Cook Exotic
@@ -277,7 +277,8 @@
                 <div class="col-span-1 flex items-center justify-between rounded-xl bg-[#102861] p-4 gap-2">
                     <div class="space-y-4">
                         <img src="./assets/india-gate-logo.png" alt="">
-                        <button class="btn bg-[#2A4D97] text-white px-9 border-none hover:bg-blue-600 ">World’s No.1 Rice</button>
+                        <button class="btn bg-[#2A4D97] text-white px-9 border-none hover:bg-blue-600 ">World’s No.1
+                            Rice</button>
                         <h1 class="text-xl text-white ">UP to <span class="font-bold">20% OFF</span></h1>
                     </div>
                     <div>
@@ -292,9 +293,27 @@
     <!-- main section ends here  -->
 
     <!-- footer section start here  -->
-    <footer class="w-full bg-[#179800] h-[658px] mt-[389px]">
-        <div>
-
+    <footer class="w-full h-[658px]  bg-[#179800] mt-[389px]">
+        <div class="relative">
+            <div
+                class="max-w-[1152px] mx-auto absolute lg:-top-[240px] lg:left-[80px] lg:right-[80px] left-10 -top-[330px] right-10">
+                <div class="lg:flex bg-[#EFEBE3] items-center justify-center rounded-xl  ">
+                    <div class="flex flex-col lg:flex-row items-center gap-8 py-[50px] ">
+                        <div>
+                            <img src="./assets/vegetable-busket.png" alt="">
+                        </div>
+                        <div class="lg:text-left text-center space-y-4">
+                            <h1 class="text-3xl lg:text-black text-[#179800] font-semibold px-8">Get Grocery News!</h1>
+                            <p>Exclusive training tips, ticks, product deals and more.</p>
+                            <div>
+                                <input class="max-w-[300px] h-[60px] placeholder:p-5" placeholder="Enter Your Email"
+                                    type="text">
+                            </div>
+                            <button class="btn btn-success px-8 text-white text-xl">Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
     <!-- footer section ends here  -->
