--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 extend: {
                     fontFamily: {
                         clifford: '#da373d',
+                        greenColor: '#179800',
                         sora: ["Sora", "serif"],
                     }
                 }
@@ -293,12 +294,12 @@
     <!-- main section ends here  -->
 
     <!-- footer section start here  -->
-    <footer class="w-full h-[658px]  bg-[#179800] mt-[389px]">
+    <footer class="w-full lg:h-[658px] h-[800px]  bg-[#179800] mt-[389px]">
         <div class="relative">
             <div
-                class="max-w-[1152px] mx-auto absolute lg:-top-[240px] lg:left-[80px] lg:right-[80px] left-10 -top-[330px] right-10">
-                <div class="lg:flex bg-[#EFEBE3] items-center justify-center rounded-xl  ">
-                    <div class="flex flex-col lg:flex-row items-center gap-8 py-[50px] ">
+                class="max-w-[1152px] mx-auto absolute lg:-top-[240px] lg:left-[80px] lg:right-[80px] left-5 -top-[330px] right-5">
+                <div class="lg:flex bg-[#EFEBE3] items-center justify-center rounded-xl ">
+                    <div class="flex flex-col lg:flex-row items-center py-[50px] lg:gap-14 ">
                         <div>
                             <img src="./assets/vegetable-busket.png" alt="">
                         </div>
@@ -306,11 +307,36 @@
                             <h1 class="text-3xl lg:text-black text-[#179800] font-semibold px-8">Get Grocery News!</h1>
                             <p>Exclusive training tips, ticks, product deals and more.</p>
                             <div>
-                                <input class="max-w-[300px] h-[60px] placeholder:p-5" placeholder="Enter Your Email"
-                                    type="text">
+                                <input class="max-w-[400px] lg:w-[400px] h-[60px] placeholder:p-5"
+                                    placeholder="Enter Your Email" type="text">
                             </div>
                             <button class="btn btn-success px-8 text-white text-xl">Subscribe</button>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="max-w-[1152px] mx-auto">
+                <div
+                    class="z-10 absolute flex flex-col lg:flex-row lg:items-center justify-center lg:top-[300px] top-[350px] lg:space-x-72 space-y-5 p-5">
+                    <div class="space-y-2">
+                        <img src="./assets/logo-footer.png" alt="">
+                        <p class="max-w-[300px] h-[67px] text-[#EFEBE3]">Discover a world of treats, toys, and essentials handpicked
+                            for your furry friends</p>
+                    </div>
+                    <div class="space-y-2">
+                        <li class="list-none text-[#EFEBE3]"><a href="#">Product</a></li>
+                        <li class="list-none text-[#EFEBE3]"><a href="#">Services</a></li>
+                        <li class="list-none text-[#EFEBE3]"><a href="#">Contact us</a></li>
+                    </div>
+                    <div class="space-y-2">
+                        <h1 class="text-xl text-[#EFEBE3] font-bold">Follow Us</h1>
+                        <div class="flex lg:items-center gap-4">
+                            <li class="list-none"><a href="#"><i class="fa-brands fa-facebook fa-xl text-[#EFEBE3]"></i></a></li>
+                            <li class="list-none"><a href="#"><i class="fa-brands fa-instagram fa-xl text-[#EFEBE3]"></i></a></li>
+                            <li class="list-none"><a href="#"><i class="fa-brands fa-linkedin fa-xl text-[#EFEBE3]"></i></i></a></li>
+                            <li class="list-none"><a href="#"><i class="fa-brands fa-youtube fa-xl text-[#EFEBE3]"></i></a></li>
+                        </div>
+
                     </div>
                 </div>
             </div>
