--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section class="mx-auto space-y-10 ">
             <!-- text content  -->
             <div class="mx-auto text-center space-y-4 mt-8 max-w-[827px] h-[224px]">
-                <h1 class="text-4xl font-bold leading-10 animate-pulse">Freshness <span class="text-[#179800]">You
+                <h1 class="text-4xl font-bold leading-10 animate-bounce">Freshness <span class="text-[#179800]">You
                         Can</span> <br>
                     <span class="text-[#179800]">Count</span> On, Prices You’ll Love!
                 </h1>
@@ -86,7 +86,7 @@
                 <h1 class="text-3xl text-[#179800] font-semibold mb-9">Service</h1>
             </div>
             <!-- service card  -->
-            <div class="grid grid-cols-1 lg:grid-cols-3 gap-5 place-items-center p-8">
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-5 place-items-center mx-4">
                 <!-- card-1  -->
                 <div
                     class="flex flex-col items-center justify-center bg-[#EFEBE3] max-w-[424px] text-center space-y-5 rounded-xl p-8">
@@ -123,7 +123,7 @@
             </div>
         </div>
         <!-- popular product  -->
-        <section class="my-[140px] bg-[#EFEBE3] flex justify-center items-center py-[140px]">
+        <section class="my-[140px] bg-[#EFEBE3] flex items-center py-[80px]">
             <div class="max-w-[1152px] mx-auto">
                 <div class="ml-5">
                     <h1 class="text-3xl font-semibold text-[#179800]">Popular Products</h1>
@@ -255,7 +255,68 @@
                 </div>
             </div>
         </section>
-
+        <!-- customer Review  -->
+        <section class="max-w-[1152px] mx-auto">
+            <!-- text content  -->
+            <div class="px-4">
+                <h1 class="text-2xl font-semibold text-[#179800]">Customer Review</h1>
+            </div>
+            <!-- customer card container  -->
+            <div class="grid grid-cols-1 lg:grid-cols-4 mt-10 gap-5 p-4">
+                <!-- card-1  -->
+                <div class="flex flex-col items-center justify-center rounded-xl py-5 px-8 bg-gradient-to-br from-[#07d6b4] to-black space-y-4 h-[300px]">
+                    <img class="w-[100px] h-[100px] rounded-full bg-green-300 border-green-800 border-4"
+                        src="./assets/customer 1.png" alt="">
+                    <div>
+                        <i class="fa-solid fa-star text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star  text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star  text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star  text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star-half  text-[#FFC107]"></i>
+                    </div>
+                    <p class="text-center text-white">Awesome fresh vegetables! Every item is absolutely fresh</p>
+                </div>
+                 <!-- card-2  -->
+                 <div class="flex flex-col items-center justify-center rounded-xl py-5 px-8 bg-gradient-to-br from-[#1d8ffd] to-[#833ab4] space-y-4  h-[300px]">
+                    <img class="w-[100px] h-[100px] rounded-full bg-white border-orange-500 border-4"
+                        src="./assets/customer 2.png" alt="">
+                    <div>
+                        <i class="fa-solid fa-star text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star  text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star  text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star  text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star  text-[#FFC107]"></i>
+                    </div>
+                    <p class="text-center text-white">Such good quality vegetables at such a low price! Really appreciated.</p>
+                </div>
+                 <!-- card-3  -->
+                 <div class="flex flex-col items-center justify-center rounded-xl py-5 px-8 bg-gradient-to-br from-[#3d0e5e] to-[#5cb3b4] space-y-4 h-[300px]">
+                    <img class="w-[100px] h-[100px] rounded-full bg-[#9da4a7] border-green-500 border-4"
+                        src="./assets/customer 3.png" alt="">
+                    <div>
+                        <i class="fa-solid fa-star text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star  text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star  text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star  text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star-half  text-[#FFC107]"></i>
+                    </div>
+                    <p class="text-center text-white">I got much better quality than the market. Thank you!</p>
+                </div>
+                 <!-- card-4 -->
+                 <div class="flex flex-col items-center justify-center rounded-xl py-5 px-8 bg-gradient-to-br from-[#ab51eb] to-black space-y-4 h-[300px]">
+                    <img class="w-[100px] h-[100px] rounded-full bg-orange-200 border-[#f9f9f9] border-4"
+                        src="./assets/customer 4.png" alt="">
+                    <div>
+                        <i class="fa-solid fa-star text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star  text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star  text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star  text-[#FFC107]"></i>
+                        <i class="fa-solid fa-star text-[#FFC107]"></i>
+                    </div>
+                    <p class="text-center text-white">The taste of the fruit is completely natural and sweet!</p>
+                </div>
+            </div>
+        </section>
         <!-- Arrival & offer section  -->
         <section class="max-w-[1152px] mx-auto my-[140px]">
             <div class="mx-4">
@@ -304,7 +365,7 @@
                             <img src="./assets/vegetable-busket.png" alt="">
                         </div>
                         <div class="lg:text-left text-center space-y-4">
-                            <h1 class="text-3xl lg:text-black text-[#179800] font-semibold px-8">Get Grocery News!</h1>
+                            <h1 class="text-3xl m-0 lg:text-black text-[#179800] font-semibold">Get Grocery News!</h1>
                             <p>Exclusive training tips, ticks, product deals and more.</p>
                             <div>
                                 <input class="max-w-[400px] lg:w-[400px] h-[60px] placeholder:p-5"
@@ -320,7 +381,8 @@
                     class="z-10 absolute flex flex-col lg:flex-row lg:items-center justify-center lg:top-[300px] top-[350px] lg:space-x-72 space-y-5 p-5">
                     <div class="space-y-2">
                         <img src="./assets/logo-footer.png" alt="">
-                        <p class="max-w-[300px] h-[67px] text-[#EFEBE3]">Discover a world of treats, toys, and essentials handpicked
+                        <p class="max-w-[300px] h-[67px] text-[#EFEBE3]">Discover a world of treats, toys, and
+                            essentials handpicked
                             for your furry friends</p>
                     </div>
                     <div class="space-y-2">
@@ -331,10 +393,14 @@
                     <div class="space-y-2">
                         <h1 class="text-xl text-[#EFEBE3] font-bold">Follow Us</h1>
                         <div class="flex lg:items-center gap-4">
-                            <li class="list-none"><a href="#"><i class="fa-brands fa-facebook fa-xl text-[#EFEBE3]"></i></a></li>
-                            <li class="list-none"><a href="#"><i class="fa-brands fa-instagram fa-xl text-[#EFEBE3]"></i></a></li>
-                            <li class="list-none"><a href="#"><i class="fa-brands fa-linkedin fa-xl text-[#EFEBE3]"></i></i></a></li>
-                            <li class="list-none"><a href="#"><i class="fa-brands fa-youtube fa-xl text-[#EFEBE3]"></i></a></li>
+                            <li class="list-none"><a href="#"><i
+                                        class="fa-brands fa-facebook fa-xl text-[#EFEBE3]"></i></a></li>
+                            <li class="list-none"><a href="#"><i
+                                        class="fa-brands fa-instagram fa-xl text-[#EFEBE3]"></i></a></li>
+                            <li class="list-none"><a href="#"><i
+                                        class="fa-brands fa-linkedin fa-xl text-[#EFEBE3]"></i></i></a></li>
+                            <li class="list-none"><a href="#"><i
+                                        class="fa-brands fa-youtube fa-xl text-[#EFEBE3]"></i></a></li>
                         </div>
 
                     </div>
