upadate customer review

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <i class="fa-solid fa-star  text-[#FFC107]"></i>
                         <i class="fa-solid fa-star  text-[#FFC107]"></i>
                     </div>
-                    <p class="text-center text-white">Such good quality vegetables at such a low price! Really appreciated.</p>
+                    <p class="text-center text-white">Such good quality vegetables at such a low price!</p>
                 </div>
                  <!-- card-3  -->
                  <div class="flex flex-col items-center justify-center rounded-xl py-5 px-8 bg-gradient-to-br from-[#3d0e5e] to-[#5cb3b4] space-y-4 h-[300px]">
