--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
             </div>
         </div>
         <!-- popular product  -->
-        <section class="my-[140px] bg-[#EFEBE3] flex items-center py-[80px]">
+        <section class="my-[140px] bg-[#EFEBE3]  py-[80px]">
             <div class="max-w-[1152px] mx-auto">
                 <div class="ml-5">
                     <h1 class="text-3xl font-semibold text-[#179800]">Popular Products</h1>
                 </div>
-                <div class="grid lg:grid-cols-4 lg:grid-rows-1 grid-cols-1 mt-10 gap-4 m-5">
+                <div class="grid lg:grid-cols-6 lg:grid-rows-1 grid-cols-1 mt-10 gap-4 m-5">
                     <!-- sidebar -->
                     <div
-                        class="col-span-2 lg:col-span-1 flex items-center bg-gradient-to-tr from-green-600 to-green-300  relative rounded-xl h-[402px] w-full p-4">
+                        class="col-span-4 lg:col-span-2 flex items-center bg-gradient-to-tr from-green-600 to-green-300 relative rounded-xl h-[402px] p-4">
                         <div class="absolute z-10 space-y-5">
                             <h1 class="text-2xl text-white font-bold">30% off</h1>
                             <p class="text-black">Discover a world of treats, toys and essentials handpicked for</p>
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                     <!-- product card  -->
-                    <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 col-span-3">
+                    <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 col-span-4">
                         <!-- card-1  -->
                         <div class="flex items-center bg-[#FFFFFF] p-4 gap-4 rounded-xl">
                             <div class="flex items-center justify-center bg-[#EFEBE3]  w-[70px] h-[70px]  rounded-xl">
