update the section

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
     <!-- main section start here  -->
     <main class="w-full my-[140px] ">
         <!-- service  -->
-        <div class="max-w-[1152px] mx-auto">
+        <div class="max-w-[1152px] mx-auto p-5 lg:p-0">
             <!-- service-text-content  -->
-            <div class="mx-7">
-                <h1 class="text-3xl text-[#179800] font-semibold mb-9">Service</h1>
+            <div class="">
+                <h1 class="text-3xl text-[#179800] font-semibold ">Service</h1>
             </div>
             <!-- service card  -->
-            <div class="grid grid-cols-1 lg:grid-cols-3 gap-5 place-items-center mx-4">
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-5 place-items-center mt-10">
                 <!-- card-1  -->
                 <div
                     class="flex flex-col items-center justify-center bg-[#EFEBE3] max-w-[424px] text-center space-y-5 rounded-xl p-8">
@@ -124,11 +124,11 @@
         </div>
         <!-- popular product  -->
         <section class="my-[140px] bg-[#EFEBE3]  py-[80px]">
-            <div class="max-w-[1152px] mx-auto">
-                <div class="ml-5">
+            <div class="max-w-[1152px] mx-auto p-5 lg:p-0">
+                <div>
                     <h1 class="text-3xl font-semibold text-[#179800]">Popular Products</h1>
                 </div>
-                <div class="grid lg:grid-cols-6 lg:grid-rows-1 grid-cols-1 mt-10 gap-4 m-5">
+                <div class="grid lg:grid-cols-6 lg:grid-rows-1 grid-cols-1 mt-10 gap-4 ">
                     <!-- sidebar -->
                     <div
                         class="col-span-4 lg:col-span-2 flex items-center bg-gradient-to-tr from-green-600 to-green-300 relative rounded-xl h-[402px] p-4">
@@ -256,13 +256,13 @@
             </div>
         </section>
         <!-- customer Review  -->
-        <section class="max-w-[1152px] mx-auto">
+        <section class="max-w-[1152px] mx-auto p-5 lg:p-0">
             <!-- text content  -->
-            <div class="px-4">
+            <div>
                 <h1 class="text-2xl font-semibold text-[#179800]">Customer Review</h1>
             </div>
             <!-- customer card container  -->
-            <div class="grid grid-cols-1 lg:grid-cols-4 mt-10 gap-5 p-4">
+            <div class="grid grid-cols-1 lg:grid-cols-4 mt-10 gap-5">
                 <!-- card-1  -->
                 <div class="flex flex-col items-center justify-center rounded-xl py-5 px-8 bg-gradient-to-br from-[#07d6b4] to-black space-y-4 h-[300px]">
                     <img class="w-[100px] h-[100px] rounded-full bg-green-300 border-green-800 border-4"
@@ -318,15 +318,15 @@
             </div>
         </section>
         <!-- Arrival & offer section  -->
-        <section class="max-w-[1152px] mx-auto my-[140px]">
-            <div class="mx-4">
+        <section class="max-w-[1152px] mx-auto p-5 my-[140px] lg:p-0">
+            <div>
                 <h1 class="text-3xl font-semibold text-[#179800]">Arrival & Offers</h1>
             </div>
-            <div class="grid gird-cols-1 lg:grid-cols-3 mt-10 gap-5  m-4 ">
+            <div class="grid gird-cols-1 lg:grid-cols-3 mt-10 gap-5">
                 <!-- card-1  -->
-                <div class="bg-[#115414] flex items-center justify-between p-4 col-span-1 lg:col-span-2  rounded-xl">
+                <div class="bg-[#115414] flex items-center justify-between p-5 col-span-1 lg:col-span-2  rounded-xl">
                     <div class="space-y-4">
-                        <img src="./assets/dawat-logo.png" alt="">
+                        <img class="mb-0" src="./assets/dawat-logo.png" alt="">
                         <button class="btn border-none text-white bg-[#63B76D] hover:bg-green-400 px-10 ">Cook Exotic
                             Dishes</button>
                         <h1 class="text-xl text-white ">UP to <span class="font-bold">20% OFF</span></h1>
@@ -336,7 +336,7 @@
                     </div>
                 </div>
                 <!-- card-2  -->
-                <div class="col-span-1 flex items-center justify-between rounded-xl bg-[#102861] p-4 gap-2">
+                <div class="col-span-1 flex items-center justify-between rounded-xl bg-[#102861] p-5 gap-4">
                     <div class="space-y-4">
                         <img src="./assets/india-gate-logo.png" alt="">
                         <button class="btn bg-[#2A4D97] text-white px-9 border-none hover:bg-blue-600 ">World’s No.1
@@ -344,7 +344,7 @@
                         <h1 class="text-xl text-white ">UP to <span class="font-bold">20% OFF</span></h1>
                     </div>
                     <div>
-                        <img src="./assets/india-gate-mock-up.png" alt="">
+                        <img  src="./assets/india-gate-mock-up.png" alt="">
                     </div>
                 </div>
             </div>
