--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="grid lg:grid-cols-6 lg:grid-rows-1 grid-cols-1 mt-10 gap-4 ">
                     <!-- sidebar -->
                     <div
-                        class="col-span-4 lg:col-span-2 flex items-center bg-gradient-to-tr from-green-600 to-green-300 relative rounded-xl h-[402px] p-4">
+                        class="col-span-4 lg:col-span-2 flex bg-gradient-to-b from-[#53DB3A] to-green-300 relative rounded-xl h-[402px] p-7">
                         <div class="absolute z-10 space-y-5">
                             <h1 class="text-2xl text-white font-bold">30% off</h1>
                             <p class="text-black">Discover a world of treats, toys and essentials handpicked for</p>
